--- a/index.html
+++ b/index.html
@@ -229,6 +229,17 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
+  <!--Комментарии-->
+  <template id="comments">
+    <li class="social__comment">
+      <img
+          class="social__picture"
+          src="{{аватар}}"
+          alt="{{имя комментатора}}"
+          width="35" height="35">
+      <p class="social__text">{{текст комментария}}</p>
+  </li>
+  </template>
 <script src="js/main.js" type="module"></script>
 </body>
 </html>
