--- a/12/index.html
+++ b/12/index.html
@@ -129,9 +129,7 @@
           </form>
         </div>
       </section>
-
       <!-- Здесь будут изображения других пользователей -->
-
     </section>
 
     <!-- Полноэкранный показ изображения -->
@@ -153,7 +151,7 @@
           </div>
 
           <!-- Комментарии к изображению -->
-          <div class="social__comment-count">5 из <span class="comments-count">125</span> комментариев</div>
+          <div class="social__comment-count"><span class="comments-count-show">5</span> из <span class="comments-count">125</span> комментариев</div>
           <ul class="social__comments">
             <li class="social__comment">
               <img class="social__picture" src="img/avatar-4.svg" alt="Аватар комментатора фотографии" width="35" height="35">
