--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
                <p class="social__text">Да это фоташоп!!!!!!!!</p>
             </li>
           </ul>
-
+        <div class="social__comments-loader-wrapper">
           <!-- Кнопка для загрузки новой порции комментариев -->
           <button type="button" class="social__comments-loader  comments-loader">Загрузить еще</button>
-
+        </div>
           <!-- Форма для отправки комментария -->
           <div class="social__footer">
             <img class="social__picture" src="img/avatar-6.svg" alt="Аватар комментатора фотографии" width="35" height="35">
